--- a/public/style.css
+++ b/public/style.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
 
 body {
+  font-size: 100%;
   margin: 0;
-  padding: 0;
+  padding: 2rem;
   background: #111;
-  color: #eee;
+  color: #ccc;
 }
 
 h1 {
   font-family: 'Montserrat', sans-serif;
+  margin: 0;
 }
