🏡🚐 Checkpoint ./public/index.html:13180552/528 ./public/style.css:13180552/99

--- a/public/style.css
+++ b/public/style.css
@@ -13,3 +13,11 @@ h1 {
   margin: 0;
   text-transform: uppercase;
 }
+
+#frekvens {
+  display: flex;
+}
+
+#frekvens canvas {
+  border: 1px solid red;
+}
