💇🍇 Checkpoint ./public/style.css:13180552/41 ./public/index.html:13180552/10

--- a/public/style.css
+++ b/public/style.css
@@ -31,7 +31,7 @@ section {
 }
 
 #frekvens canvas {
-  background: red;
+  background: #000;
   position: absolute;
   top: 0;
   right: 0;
@@ -54,5 +54,5 @@ section {
   background: 0;
   color: #eee;
   font-family: monospace;
-  
+  border: 1px solid black;
 }
