--- a/public/style.css
+++ b/public/style.css
@@ -16,29 +16,14 @@ h1 {
 
 section {
   margin-top: 2rem;
-  
 }
+
 #frekvens {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-gap: 2rem;
 }
 
-#frekvens .canvas-container {
-  padding-top: 100%;
-  box-sizing: border-box;
-  position: relative;
-}
-
-#frekvens canvas {
+#frekvens #front {
+/*   width: 100%; */
   background: #111;
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 100%;
 }
 
 #code {
