--- a/public/style.css
+++ b/public/style.css
@@ -10,12 +10,15 @@ body {
 
 h1 {
   font-family: 'Montserrat', sans-serif;
-  margin: 0;
-  text-transform: uppercase;
+  margin: 0 auto;
+  text-align: center;
+  width: 600px;
+  text-transform: uppercase;  
 }
 
 section {
-  margin-top: 2rem;
+  margin: 2rem auto 0;
+  width: 600px;
 }
 
 #frekvens {
