🏵🍽 Checkpoint ./public/style.css:13180552/96 ./public/index.html:13180552/27 ./public/script.js:13180552/329 ./server.js:13180552/176

--- a/public/style.css
+++ b/public/style.css
@@ -12,20 +12,21 @@ h1 {
   font-family: 'Montserrat', sans-serif;
   margin: 0 auto;
   text-align: center;
-  width: 600px;
+  width: 50vw;
   text-transform: uppercase;  
 }
 
 section {
   margin: 2rem auto 0;
-  width: 600px;
+  width: 50vw;
 }
 
 #frekvens {
 }
 
 #frekvens #front {
-/*   width: 100%; */
+  width: 50vw;
+  height: 50vw;
   background: #111;
 }
 
