--- a/public/style.css
+++ b/public/style.css
@@ -38,12 +38,16 @@ section {
   flex-grow: 1;
   background: #222;
   color: #eee;
+  border: none;
   font-family: monospace;
-  border: 1px solid black;
   font-size: 125%;
   padding: 1rem;
 }
 
 #error {
-  color: #fa0;
+  margin: 2rem auto 0;
+  width: 50vw;
+  color: #f30;
+  font-family: sans-serif;
+  font-size: 125%;
 }
