👟🏜 Checkpoint ./public/style.css:13180552/255 ./public/script.js:13180552/59

--- a/public/style.css
+++ b/public/style.css
@@ -44,6 +44,10 @@ section {
   padding: 1rem;
 }
 
+#code textarea:focus {
+  outline: 1px solid #eee;
+}
+
 #error {
   margin: 2rem auto 0;
   width: 50vw;
