--- a/public/style.css
+++ b/public/style.css
@@ -3,7 +3,7 @@
 body {
   font-size: 100%;
   margin: 0;
-  padding: 2rem;
+  padding: 2rem 0;
   background: #000;
   color: #ccc;
 }
@@ -13,15 +13,13 @@ h1 {
   margin: 0 auto;
   text-align: center;
   width: 50vw;
+  font-size: 3vw;
   text-transform: uppercase;  
 }
 
 section {
   margin: 2rem auto 0;
   width: 50vw;
-}
-
-#frekvens {
 }
 
 #frekvens #front {
@@ -40,8 +38,9 @@ section {
   color: #eee;
   border: none;
   font-family: monospace;
-  font-size: 125%;
-  padding: 1rem;
+  font-size: 2vw;
+  padding: 1vw;
+  height: 25vw;
 }
 
 #code textarea:focus {
@@ -49,9 +48,9 @@ section {
 }
 
 #error {
-  margin: 2rem auto 0;
+  margin: 1rem auto 0;
   width: 50vw;
   color: #f30;
   font-family: sans-serif;
-  font-size: 125%;
+  font-size: 2vw;
 }
