--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap');
-
 body {
   font-size: 100%;
   margin: 0;
@@ -9,7 +7,7 @@ body {
 }
 
 h1 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: Verdana, sans-serif;
   margin: 0 auto;
   text-align: center;
   width: 50vw;
