--- a/public/as.css
+++ b/public/as.css
@@ -11,6 +11,36 @@ body {
   font-size: 100%;
 }
 
+#top-bar {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+#top-bar button {
+  border: 1px solid #666;
+  background: #111;
+  color: #ccc;
+  padding: 0.125rem 0.5rem;
+  font-size: 0.75rem;
+  text-transform: uppercase;
+  margin: 0.25rem;
+  cursor: pointer;
+}
+
+#top-bar button:hover:not(:disabled) {
+  border-color: #888;
+  background: #333;
+  color: #fff;
+}
+
+#top-bar button:disabled {
+  cursor: default;
+  opacity: 0.5;
+}
+
 #display-container {
   flex: 1;
   display: flex;
